--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     </script>
 </head>
 
+<script src="./script.js"></script>
 <body style='margin: 0; overflow: hidden;'>
     <a-scene
-        vr-mode-ui="enabled: false"
+       vr-mode-ui="enabled: false"
 		embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
-        <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.05 0.05 0.05" gps-entity-place="longitude: 49.35455; latitude: -123.02776;" animation-mixer/>
-        <a-camera gps-camera rotation-reader></a-camera>
+        <a-camera gps-camera rotation-reader>
+		</a-camera>
 	</a-scene>
 </body>
