--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a-scene 
         vr-mode-ui='enabled: false' 
         embedded
-        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
+        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: true;'>
     <a-camera gps-camera rotation-reader></a-camera>
 </a-scene>
 <div class="centered">
